--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,5 +2,8 @@
 @import 'scss/base';
 @import 'scss/nav';
 @import 'scss/footer';
+@import 'scss/_hero';
+@import 'scss/button';
 
-@import '../assets/fonts/webfonts/stylesheet.css';
+@import '../assets/fonts/hk-grotesk/hk-grotesk';
+@import '../assets/fonts/san-francisco/san-francisco';
