--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1,14 +1,14 @@
 body {
-  font-family: 'eesti';
+  font-family: 'SanFrancisco';
   font-size: 16px;
-  background: #FDFDFD;
 }
 
 
 .container {
   padding: 0 32px;
-  max-width: 1440px;
+  max-width: 1280px;
   width: 100%;
+  margin: auto;
 }
 
 
